// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VehicleRentalOverlay RentalBicycles smoke-test 1`] = `
<div class="styled__StoryMapContainer-sc-12kjso7-6 jsxXhE">
  <div class="maplibregl-map mapboxgl-map"
       style="position: relative; width: 100%; height: 100%;"
  >
    <div class="maplibregl-canvas-container mapboxgl-canvas-container maplibregl-interactive mapboxgl-interactive maplibregl-touch-drag-pan mapboxgl-touch-drag-pan maplibregl-touch-zoom-rotate mapboxgl-touch-zoom-rotate">
      <canvas class="maplibregl-canvas mapboxgl-canvas"
              tabindex="0"
              aria-label="Map"
              role="region"
              width="1248"
              height="648"
              style="width: 1248px; height: 648px;"
      >
      </canvas>
    </div>
    <div class="maplibregl-control-container mapboxgl-control-container">
      <div class="maplibregl-ctrl-top-left mapboxgl-ctrl-top-left">
      </div>
      <div class="maplibregl-ctrl-top-right mapboxgl-ctrl-top-right">
      </div>
      <div class="maplibregl-ctrl-bottom-left mapboxgl-ctrl-bottom-left">
      </div>
      <div class="maplibregl-ctrl-bottom-right mapboxgl-ctrl-bottom-right">
        <details class="maplibregl-ctrl maplibregl-ctrl-attrib mapboxgl-ctrl mapboxgl-ctrl-attrib maplibregl-attrib-empty mapboxgl-attrib-empty"
                 open
        >
          <summary class="maplibregl-ctrl-attrib-button mapboxgl-ctrl-attrib-button"
                   title="Toggle attribution"
                   aria-label="Toggle attribution"
          >
          </summary>
          <div class="maplibregl-ctrl-attrib-inner mapboxgl-ctrl-attrib-inner">
          </div>
        </details>
      </div>
    </div>
  </div>
</div>
`;

exports[`VehicleRentalOverlay RentalBicyclesVisibilityControlledByKnob smoke-test 1`] = `
<div class="styled__StoryMapContainer-sc-12kjso7-6 jsxXhE">
  <div class="maplibregl-map mapboxgl-map"
       style="position: relative; width: 100%; height: 100%;"
  >
    <div class="maplibregl-canvas-container mapboxgl-canvas-container maplibregl-interactive mapboxgl-interactive maplibregl-touch-drag-pan mapboxgl-touch-drag-pan maplibregl-touch-zoom-rotate mapboxgl-touch-zoom-rotate">
      <canvas class="maplibregl-canvas mapboxgl-canvas"
              tabindex="0"
              aria-label="Map"
              role="region"
              width="1248"
              height="648"
              style="width: 1248px; height: 648px;"
      >
      </canvas>
    </div>
    <div class="maplibregl-control-container mapboxgl-control-container">
      <div class="maplibregl-ctrl-top-left mapboxgl-ctrl-top-left">
      </div>
      <div class="maplibregl-ctrl-top-right mapboxgl-ctrl-top-right">
      </div>
      <div class="maplibregl-ctrl-bottom-left mapboxgl-ctrl-bottom-left">
      </div>
      <div class="maplibregl-ctrl-bottom-right mapboxgl-ctrl-bottom-right">
        <details class="maplibregl-ctrl maplibregl-ctrl-attrib mapboxgl-ctrl mapboxgl-ctrl-attrib"
                 open
        >
          <summary class="maplibregl-ctrl-attrib-button mapboxgl-ctrl-attrib-button"
                   title="Toggle attribution"
                   aria-label="Toggle attribution"
          >
          </summary>
          <div class="maplibregl-ctrl-attrib-inner mapboxgl-ctrl-attrib-inner">
            ©
            <a href="https://carto.com/about-carto/"
               target="_blank"
               rel="noopener"
            >
              CARTO
            </a>
            , ©
            <a href="http://www.openstreetmap.org/about/"
               target="_blank"
            >
              OpenStreetMap
            </a>
            contributors
          </div>
        </details>
      </div>
    </div>
  </div>
</div>
`;

exports[`VehicleRentalOverlay RentalCars smoke-test 1`] = `
<div class="styled__StoryMapContainer-sc-12kjso7-6 jsxXhE">
  <div class="maplibregl-map mapboxgl-map"
       style="position: relative; width: 100%; height: 100%;"
  >
    <div class="maplibregl-canvas-container mapboxgl-canvas-container maplibregl-interactive mapboxgl-interactive maplibregl-touch-drag-pan mapboxgl-touch-drag-pan maplibregl-touch-zoom-rotate mapboxgl-touch-zoom-rotate">
      <canvas class="maplibregl-canvas mapboxgl-canvas"
              tabindex="0"
              aria-label="Map"
              role="region"
              width="1248"
              height="648"
              style="width: 1248px; height: 648px;"
      >
      </canvas>
    </div>
    <div class="maplibregl-control-container mapboxgl-control-container">
      <div class="maplibregl-ctrl-top-left mapboxgl-ctrl-top-left">
      </div>
      <div class="maplibregl-ctrl-top-right mapboxgl-ctrl-top-right">
      </div>
      <div class="maplibregl-ctrl-bottom-left mapboxgl-ctrl-bottom-left">
      </div>
      <div class="maplibregl-ctrl-bottom-right mapboxgl-ctrl-bottom-right">
        <details class="maplibregl-ctrl maplibregl-ctrl-attrib mapboxgl-ctrl mapboxgl-ctrl-attrib"
                 open
        >
          <summary class="maplibregl-ctrl-attrib-button mapboxgl-ctrl-attrib-button"
                   title="Toggle attribution"
                   aria-label="Toggle attribution"
          >
          </summary>
          <div class="maplibregl-ctrl-attrib-inner mapboxgl-ctrl-attrib-inner">
            ©
            <a href="https://carto.com/about-carto/"
               target="_blank"
               rel="noopener"
            >
              CARTO
            </a>
            , ©
            <a href="http://www.openstreetmap.org/about/"
               target="_blank"
            >
              OpenStreetMap
            </a>
            contributors
          </div>
        </details>
      </div>
    </div>
  </div>
</div>
`;

exports[`VehicleRentalOverlay RentalEScooters smoke-test 1`] = `
<div class="styled__StoryMapContainer-sc-12kjso7-6 jsxXhE">
  <div class="maplibregl-map mapboxgl-map"
       style="position: relative; width: 100%; height: 100%;"
  >
    <div class="maplibregl-canvas-container mapboxgl-canvas-container maplibregl-interactive mapboxgl-interactive maplibregl-touch-drag-pan mapboxgl-touch-drag-pan maplibregl-touch-zoom-rotate mapboxgl-touch-zoom-rotate">
      <canvas class="maplibregl-canvas mapboxgl-canvas"
              tabindex="0"
              aria-label="Map"
              role="region"
              width="1248"
              height="648"
              style="width: 1248px; height: 648px;"
      >
      </canvas>
    </div>
    <div class="maplibregl-control-container mapboxgl-control-container">
      <div class="maplibregl-ctrl-top-left mapboxgl-ctrl-top-left">
      </div>
      <div class="maplibregl-ctrl-top-right mapboxgl-ctrl-top-right">
      </div>
      <div class="maplibregl-ctrl-bottom-left mapboxgl-ctrl-bottom-left">
      </div>
      <div class="maplibregl-ctrl-bottom-right mapboxgl-ctrl-bottom-right">
        <details class="maplibregl-ctrl maplibregl-ctrl-attrib mapboxgl-ctrl mapboxgl-ctrl-attrib"
                 open
        >
          <summary class="maplibregl-ctrl-attrib-button mapboxgl-ctrl-attrib-button"
                   title="Toggle attribution"
                   aria-label="Toggle attribution"
          >
          </summary>
          <div class="maplibregl-ctrl-attrib-inner mapboxgl-ctrl-attrib-inner">
            ©
            <a href="https://carto.com/about-carto/"
               target="_blank"
               rel="noopener"
            >
              CARTO
            </a>
            , ©
            <a href="http://www.openstreetmap.org/about/"
               target="_blank"
            >
              OpenStreetMap
            </a>
            contributors
          </div>
        </details>
      </div>
    </div>
  </div>
</div>
`;

exports[`VehicleRentalOverlay RentalEScootersWithCustomNaming smoke-test 1`] = `
<div class="styled__StoryMapContainer-sc-12kjso7-6 jsxXhE">
  <div class="maplibregl-map mapboxgl-map"
       style="position: relative; width: 100%; height: 100%;"
  >
    <div class="maplibregl-canvas-container mapboxgl-canvas-container maplibregl-interactive mapboxgl-interactive maplibregl-touch-drag-pan mapboxgl-touch-drag-pan maplibregl-touch-zoom-rotate mapboxgl-touch-zoom-rotate">
      <canvas class="maplibregl-canvas mapboxgl-canvas"
              tabindex="0"
              aria-label="Map"
              role="region"
              width="1248"
              height="648"
              style="width: 1248px; height: 648px;"
      >
      </canvas>
    </div>
    <div class="maplibregl-control-container mapboxgl-control-container">
      <div class="maplibregl-ctrl-top-left mapboxgl-ctrl-top-left">
      </div>
      <div class="maplibregl-ctrl-top-right mapboxgl-ctrl-top-right">
      </div>
      <div class="maplibregl-ctrl-bottom-left mapboxgl-ctrl-bottom-left">
      </div>
      <div class="maplibregl-ctrl-bottom-right mapboxgl-ctrl-bottom-right">
        <details class="maplibregl-ctrl maplibregl-ctrl-attrib mapboxgl-ctrl mapboxgl-ctrl-attrib"
                 open
        >
          <summary class="maplibregl-ctrl-attrib-button mapboxgl-ctrl-attrib-button"
                   title="Toggle attribution"
                   aria-label="Toggle attribution"
          >
          </summary>
          <div class="maplibregl-ctrl-attrib-inner mapboxgl-ctrl-attrib-inner">
            ©
            <a href="https://carto.com/about-carto/"
               target="_blank"
               rel="noopener"
            >
              CARTO
            </a>
            , ©
            <a href="http://www.openstreetmap.org/about/"
               target="_blank"
            >
              OpenStreetMap
            </a>
            contributors
          </div>
        </details>
      </div>
    </div>
  </div>
</div>
`;
